--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,25 +1,30 @@
-name: "PyCaret AutoML Git Action"
-description: "A simple example of AutoML created using PyCaret 2.0"
-author: "Moez Ali"
-inputs:
-  DATASET:
-    description: "Dataset for Training"
-    required: true
-    default: "juice"
-  TARGET:
-    description: "Name of Target variable"
-    required: true
-    default: "Purchase"     
-  USECASE:
-    description: "Use-case Classification or Regression"
-    required: true
-    default: "classification"     
-outputs:
-  myOutput:
-    description: "Output from the action"
-runs:
-  using: "docker"
-  image: "Dockerfile"
-branding:
-  icon: 'box'
-  color: 'blue'
+name: PyCaret AutoML Git Action
+on: 
+  push :
+    branches: [ master ]  
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: PyCaret AutoML Git Action
+        id: model
+        uses: pycaret/pycaret-git-actions@automl
+        with:
+          DATASET: "juice"
+          TARGET: "Purchase"
+          USECASE: "classification"
+      - name: Upload model.pkl
+        uses: actions/upload-artifact@v2
+        with: 
+          name: model
+          path: model.pkl
+      - name: Upload exp_github_logs.csv
+        uses: actions/upload-artifact@v2
+        with: 
+          name: experiment-logs
+          path: exp_github_logs.csv
+      - name: Upload logs.log
+        uses: actions/upload-artifact@v2
+        with: 
+          name: system-logs
+          path: logs.log
